# circuit-breaker-framework

./: README.md  pyproject.toml
examples/: doc_classifier.yaml
oracles/: blast_radius_oracle.yaml  rag_toxicity_oracle.yaml  resource_exhaustion_oracle.yaml  semantic_drift_oracle.yaml
src/: __init__.py  circuit_breaker.py
src/aie/: __init__.py  orchestrator.py
