[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-breaker-framework"
version = "0.1.0"
description = "A general-purpose circuit breaker framework for automated workflows with assumption monitoring and audit trails."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6.0", "structlog>=24.1.0", "PyYAML>=6.0.1", "apscheduler>=3.10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
